# cutorch_hip

./: CMakeLists.txt  FFI.lua  README.ROCm.md  README.md  TensorMath.cpp  TensorMath.lua  init.c  init.cc  init.cpp  init.lua  runtests.sh  sumtests.sh
cmake/: HipTorchWrap.cmake
generic/: CStorage.c  CStorageCopy.c  CTensor.c  CTensorCopy.c  TensorOperator.c
lib/THC/: CMakeLists.txt  THC.h  THCAllocator.cc  THCApply.cuh  THCAsmUtils.cuh  THCAtomics.cuh  THCBlas.cu  THCBlas.h  THCCachingAllocator.cpp  THCCachingHostAllocator.cpp  THCCachingHostAllocator.h  THCDeviceTensor-inl.cuh  THCDeviceTensor.cuh  THCDeviceUtils.cuh  THCGeneral.c  THCGeneral.cc  THCGeneral.h.in  THCHalf.cu  THCHalf.h  THCNumerics.cuh  THCReduce.cuh  THCReduceAll.cuh  THCReduceApplyUtils.cuh  THCScanUtils.cuh  THCSleep.cu  THCSortUtils.cuh  THCStorage.cu  THCStorageCopy.cpp  THCStream.c  THCStream.cc  THCStream.h  THCTensor.cpp  THCTensor.h  THCTensorConv.cu  THCTensorCopy.cc  THCTensorCopy.cu  THCTensorIndex.cu  THCTensorIndex.h  THCTensorInfo.cuh  THCTensorMasked.cuh  (+27 more)
lib/THC/MTGP/: hiprand_mtgp32.cpp  hiprand_mtgp32.h  mtgp32-fast.h  mtgp32-param-fast.cpp  mtgp32-param-fast.cpp.orig
lib/THC/generic/: THCStorage.c  THCStorage.cu  THCStorageCopy.c  THCStorageCopy.cu  THCTensor.c  THCTensor.cu  THCTensor.h  THCTensorCopy.c  THCTensorCopy.cu  THCTensorIndex.cu  THCTensorMasked.cu  THCTensorMath.cu  THCTensorMathBlas.cu  THCTensorMathBlas.h  THCTensorMathMagma.cu  THCTensorMathPairwise.cu  THCTensorMathPairwise.h  THCTensorMathPointwise.cu  THCTensorMathReduce.cu  THCTensorMathReduce.h  THCTensorMathScan.cu  THCTensorMode.cu  THCTensorRandom.cu  THCTensorScatterGather.cu  THCTensorSort.cu  THCTensorTopK.cu  THCThrustAlternate.cu  THCThrustAlternate.h
rocks/: cutorch-scm-1.rockspec
test/: test.cpp  test.lua  test_shutdown.lua
torch/generic/: Storage.c  Tensor.c
